yeeted nautilus compat. moved into nautilus. reducing file size